--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="src/css/style.css">
+
+
+  <title>Harry Potter Quotes</title>
 </head>
 <body>
-
+<h1>Harry Potter Quotes</h1>
+<div id="quoteDisplay">
+</div>
+<button onclick="newQuote()">Charm me!</button>
+<script src="src/js/js-quotes.js" charset="utf-8"></script>
 </body>
 </html>
