--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="src/css/style.css">
-
   <title>Harry Potter Quotes</title>
+
 </head>
 
 <body>
   <main class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="col-4">
+    <div class="row justify-content-center my-5">
+      <div class="col-lg-4 col-md-8 col-sm-10">
 
         <div class="card text-center">
           <div class="card-header">
@@ -27,7 +27,7 @@
             <button onclick="newQuote()" class="btn btn-primary mb-5">Charm me!</a>
         </div>
         <div class="card-footer text-muted">
-          Miklos Bukva
+          MB
         </div>
       </div>
 
@@ -36,10 +36,16 @@
   </main>
 
 
-  <script src="src/js/js-quotes.js" charset="utf-8"></script>
+
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+<script src="src/js/js-quotes.js" charset="utf-8"></script>
+
+
 </body>
 
 </html>
