--- a/index.html
+++ b/index.html
@@ -12,38 +12,40 @@
 </head>
 
 <body>
-  <main class="container-fluid">
-    <div class="row justify-content-center my-5">
-      <div class="col-lg-4 col-md-8 col-sm-10">
+  <div class="main-bg" style="height:100vh;">
+    <main class="container-fluid">
+      <div class="row justify-content-center py-5">
+        <div class="col-lg-4 col-md-8 col-sm-10">
 
-        <div class="card text-center">
-          <div class="card-header">
-            Harry Potter Quotes
-          </div>
-          <div class="card-body">
-            <div id="quoteDisplay" class="my-5">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <div class="card text-center">
+            <div class="card-header">
+              Harry Potter Quotes
             </div>
-            <button onclick="newQuote()" class="btn btn-primary mb-5">Charm me!</a>
-        </div>
-        <div class="card-footer text-muted">
-          MB 2018
+            <div class="card-body">
+              <div id="quoteDisplay" class="my-5">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <button onclick="newQuote()" class="btn btn-primary mb-5">Charm me!</a>
+            </div>
+            <div class="card-footer text-muted">
+              MB 2018
+            </div>
+          </div>
         </div>
       </div>
-
-
+    </main>
   </div>
-  </main>
 
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 
-<script src="src/js/js-quotes.js" charset="utf-8"></script>
+    <script src="src/js/js-quotes.js" charset="utf-8"></script>
 
 
 </body>
