--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
             <div class="card-body">
               <div id="quoteDisplay" class="my-5">
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text"></p>
               </div>
               <button onclick="newQuote()" class="btn btn-primary mb-5">Charm me!</a>
             </div>
             <div class="card-footer text-muted">
-              MB 2018
+              Miklos Bukva
             </div>
           </div>
         </div>
